<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.charles.alc4phase1.MainActivity">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlue"
            android:elevation="4dp"
            android:theme="@style/AppToolBar"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"/>

    <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@id/toolbar">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:textSize="30sp"
                android:text="@string/welcome_text"
                app:layout_constraintTop_toTopOf="@id/container"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            <Button
                    android:id="@+id/about_alc"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/lightyellow"
                    android:text="@string/about_alc"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"/>
            <Button
                    android:id="@+id/my_profile"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/lightyellow"
                    android:text="@string/my_profile"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"/>
        </LinearLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>